--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NPM Clone Nifty Penguin Magic npm Enterprise</title>
+    <title>NPM Clone Marja Reponen </title>
     <link rel="stylesheet" href="./styles.css"/>
 </head>
 <body>
@@ -25,9 +25,9 @@
                     </ul>
                 </nav>
         </div> 
-        <div>
-            <img src="./images/npm-logo.png" alt="npm logo">
-          <div>
+        <div class="search-space">
+            <img class="npm-logo" src="./images/npm-logo.png" alt="npm logo">
+          <div class="search-bar">
                 <form action="/some-url" method="post">
                     <img src="./images/magnifying-glass.png" alt="glass" class="glass">
                     <label for="search"></label>
@@ -56,22 +56,22 @@
     </section>
     <section id="benefits">
         <div class="container">
-            <img src="./images/zero-configuration.svg" alt="easy to install">
+            <img class="zero-photo" src="./images/zero-configuration.svg" alt="easy to install">
             <h3>Zero configuration</h3>
             <p>Create an org, add your team, and start collaborating. Nothing to configure, set up, or manage.</p>
         </div>
         <div class="container">
-            <img src="./images/team-management.svg" alt="team management">
+            <img class="team-photo" src="./images/team-management.svg" alt="team management">
             <h3>Team management</h3>
             <p>Control who has access to what modules within your team namespace using straightforward team management capabilities.</p>
         </div>
         <div class="container">
-            <img src="./images/familiar-features.svg" alt="familiar features">
+            <img class="familiar-photo" src="./images/familiar-features.svg" alt="familiar features">
             <h3>Familiar features</h3>
             <p>npm Orgs has 100% parity with all the public npm registry features your developers already use.</p>
         </div>
         <div class="container">
-            <img src="./images/npm-audit.svg" alt="npm audit">
+            <img class="audit-photo" src="./images/npm-audit.svg" alt="npm audit">
             <h3>npm audit</h3>
             <p>Enjoy the security auditing features built into the npm client, a zero-friction way to make open source software safer.</p>
         </div>
